src/syntax/snapshots/simpl__syntax__test__binops.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Binop {
    lhs: Binop {
        lhs: Lit {
            val: Int(
                1,
            ),
        },
        rhs: Lit {
            val: Int(
                2,
            ),
        },
        op: IntMul,
    },
    rhs: Binop {
        lhs: Lit {
            val: Int(
                3,
            ),
        },
        rhs: Lit {
            val: Int(
                4,
            ),
        },
        op: IntDiv,
    },
    op: IntAdd,
}
