src/syntax/snapshots/simpl__syntax__test__function_application-2.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
App {
    func: App {
        func: Var {
            name: "f",
        },
        arg: Var {
            name: "g",
        },
    },
    arg: Var {
        name: "x",
    },
}
