src/syntax/snapshots/simpl__syntax__test__function_application-3.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
App {
    func: Var {
        name: "f",
    },
    arg: App {
        func: Var {
            name: "g",
        },
        arg: Var {
            name: "x",
        },
    },
}
