src/syntax/snapshots/simpl__syntax__test__function_application.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
App {
    func: Var {
        name: "f",
    },
    arg: Lit {
        val: Int(
            1,
        ),
    },
}
