src/syntax/snapshots/simpl__syntax__test__if_then_else-3.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
If {
    test: Lit {
        val: Bool(
            true,
        ),
    },
    then: Lit {
        val: Int(
            0,
        ),
    },
    els: If {
        test: Lit {
            val: Bool(
                false,
            ),
        },
        then: Lit {
            val: Float(
                0.5,
            ),
        },
        els: Lit {
            val: Float(
                1.5,
            ),
        },
    },
}
