src/syntax/snapshots/simpl__syntax__test__if_then_else.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
If {
    test: Lit {
        val: Bool(
            true,
        ),
    },
    then_branch: Lit {
        val: Int(
            1,
        ),
    },
    else_branch: Lit {
        val: Int(
            0,
        ),
    },
}
