src/syntax/snapshots/simpl__syntax__test__lambda_abstraction-2.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Lambda {
    params: [
        Param {
            name: "x",
            ann: None,
        },
        Param {
            name: "y",
            ann: None,
        },
    ],
    body: Var {
        name: "y",
    },
}
