src/syntax/snapshots/simpl__syntax__test__lambda_abstraction.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Lambda {
    params: [
        "x",
    ],
    body: Var {
        name: "x",
    },
}
