src/syntax/snapshots/simpl__syntax__test__let_binding-2.snap
---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Let {
    bindings: [
        (
            "x",
            Lit {
                val: Int(
                    5,
                ),
            },
        ),
        (
            "y",
            Lit {
                val: Bool(
                    false,
                ),
            },
        ),
    ],
    body: Var {
        name: "x",
    },
}
